# IT-Labs

./: .gitignore  1.cpp  2.cpp  README.md
.ignore/lab1/doritorainn/: main.cpp
.ignore/lab2/build-doritorainn-Desktop-Debug/: CMakeCache.txt  qtcsettings.cmake
.ignore/test/: CMakeLists.txt  main.cpp
final_day1/: main.cpp
final_day1/build-Debug/: CMakeCache.txt
final_day2/build-Debug/: Makefile
lab #1/doritorainn/: CMakeLists.txt
lab #2/: Laboratory_2.cpp
lab #2/build-doritorainn-Desktop-Debug/: build.ninja  cmake_install.cmake
lab #2/build-doritorainn-Desktop-Debug/.qtc_clangd/: compile_commands.json
lab #2/doritorainn/: CMakeLists.txt  main.cpp
lab #3/: CMakeLists.txt
lab #3/enc_temp_folder/a3c9166883998a7e520c6f06e5cf7ca/: lab #3.cpp
lab #3/lab #3/: CMakeLists.txt  lab #3  lab #3.cpp  lab #3.h
lab1_2_final/: sajdasdjaskdald.sln
lab1_2_final/lab1_2_final/: build  sajdasdjaskdald.cpp
lab_1/: Задача 12.03.cpp  Задача 12.03.vcxproj  Задача 12.03.vcxproj.filters
lab_2/: Задача 2 12.03.cpp  Задача 2 12.03.h  Задача 2 12.03.vcxproj  Задача 2 12.03.vcxproj.filters
linux/: .gitignore  README.md
linux/build-lab1_2_final-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
linux/build-lab1_2_final-Desktop-Debug/.qtc_clangd/: compile_commands.json
linux/lab1_2_final/: CMakeLists.txt  main  main.cpp  main.out
old_files/test/build-Debug/: KGK.ilk
test/: 1.cpp  2.cpp  test.pro
test/build-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
test2/build-Debug/: cmake_install.cmake
windows/: README.md
windows/lab4/: CMakeLists.txt  lab4.cpp  lab4.h
(+58 files in other folders)
