# CMakeList.txt : CMake project for lab #3, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (CMakeTarget "lab #3.cpp" "lab #3.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET CMakeTarget PROPERTY CXX_STANDARD 20)
endif()

# TODO: Add tests and install targets if needed.
